--- a/MERN-docker-compose/mern/docker-compose.yaml
+++ b/MERN-docker-compose/mern/docker-compose.yaml
@@ -1,27 +1,37 @@
 services:
-  frontend:
-    build: mern/frontend
-    ports:
-      - "5173:5173"
-    networks:
-      - mern
   backend:
-    build: mern/backend 
+    build: ./mern/backend
     ports:
-      - "5050:5050"
+      - "5050:5050" 
     networks:
-      - mern
+      - mern_network
+    environment:
+      MONGO_URI: mongodb://mongo:27017/mydatabase  
     depends_on:
-      - mongo
+      - mongodb
+
+  frontend:
+    build: ./mern/frontend
     ports:
-      - "2707:2707"
+      - "5173:5173"  
     networks:
-      - mern
+      - mern_network
+    environment:
+      REACT_APP_API_URL: http://backend:5050 
+
+  mongodb:
+    image: mongo:latest  
+    ports:
+      - "27017:27017"  
+    networks:
+      - mern_network
     volumes:
-      - mongo-data:/data/db
+      - mongo-data:/data/db  
+
 networks:
-  mern:
-    driver: bridge
-voulmes:
+  mern_network:
+    driver: bridge 
+
+volumes:
   mongo-data:
-    driver: local
+    driver: local  # Persist MongoDB data locally
