--- a/MERN-docker-compose/mern/docker-compose.yaml
+++ b/MERN-docker-compose/mern/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   backend:
-    build: ./mern/backend
+    build: ./backend
     ports:
       - "5050:5050" 
     networks:
@@ -11,7 +11,7 @@ services:
       - mongodb
 
   frontend:
-    build: ./mern/frontend
+    build: ./frontend
     ports:
       - "5173:5173"  
     networks:
